<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        tools:context="com.example.android.webquiz.MainActivity">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/title_app" />

        <!--First block of questions -->
        <!--The first question -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question1_1" />

            <EditText
                android:id="@+id/editx_aq1"
                style="@style/EditTextStyle" />

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question1_2" />
        </LinearLayout>

        <!--The second question -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/question2_1" />

            <EditText
                android:id="@+id/editx_aq2"
                style="@style/EditTextStyle" />

        </LinearLayout>

        <TextView
            style="@style/QuestionTextStyle"
            android:layout_height="35dp"
            android:text="@string/question2_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <!--Second block of questions -->
        <!-- question 3-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question3" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_aq3_true"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_answer" />

            <RadioButton
                android:id="@+id/radio_aq3_false"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_answer" />
        </RadioGroup>

        <!-- question 4-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_aq4_true"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_answer" />

            <RadioButton
                android:id="@+id/radio_aq4_false"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_answer" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <!--Third block of questions -->
        <!-- question 5-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question5" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_aq5_1"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q5_1" />

            <RadioButton
                android:id="@+id/radio_aq5_2"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q5_2" />
        </RadioGroup>

        <!-- question 6-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question6" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_aq6_1"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q6_1" />

            <RadioButton
                android:id="@+id/radio_aq6_2"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q6_2" />

            <RadioButton
                android:id="@+id/radio_aq6_3"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q6_3" />
        </RadioGroup>

        <!-- question 7-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question7" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_aq7_1"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q7_1" />

            <RadioButton
                android:id="@+id/radio_aq7_2"
                style="@style/AnswerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_q7_2" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <!--Fourth block of questions -->
        <!-- question 8-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question8" />

        <CheckBox
            android:id="@+id/checkbox_aq8_1"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q8_1" />

        <CheckBox
            android:id="@+id/checkbox_aq8_2"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q8_2" />

        <CheckBox
            android:id="@+id/checkbox_aq8_3"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q8_3" />

        <CheckBox
            android:id="@+id/checkbox_aq8_4"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q8_4" />

        <CheckBox
            android:id="@+id/checkbox_aq8_5"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q8_5" />

        <!-- question 9-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question9" />

        <CheckBox
            android:id="@+id/checkbox_aq9_1"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q9_1" />

        <CheckBox
            android:id="@+id/checkbox_aq9_2"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q9_2" />

        <CheckBox
            android:id="@+id/checkbox_aq9_3"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q9_3" />

        <CheckBox
            android:id="@+id/checkbox_aq9_4"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q9_4" />

        <!-- question 10-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question10" />

        <CheckBox
            android:id="@+id/checkbox_aq10_1"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q10_1" />

        <CheckBox
            android:id="@+id/checkbox_aq10_2"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q10_2" />

        <CheckBox
            android:id="@+id/checkbox_aq10_3"
            style="@style/AnswerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_q10_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="showScore"
            android:text="@string/reviewButton"
            android:textSize="@dimen/textSizeButton" />
    </LinearLayout>
</ScrollView>